# EvalOps

./: .gitignore  CNAME  CONTRIBUTING.md  Makefile  README.md  _config.yml  evalops.spec  installer.iss  multi-build.py  pyproject.toml
.aico/: project.json
.evalops/: config.toml
.github/workflows/: code-style.yml  evalops-code-review.yml  evalops-react-to-comments.yml  pages.yml  pypi-release.yml  tests.yml  windows-installer.yml
documentation/: command_line_reference.md  config_cookbook.md  documentation_generation.md  github_setup.md  jira_integration.md  linear_integration.md  troubleshooting.md
documentation/assets/gh-pages/: header-include.html  style.css
evalops/: __main__.py  bootstrap.py  cli.py  cli_base.py  config.toml  constants.py  core.py  entrypoint.py  env.py  gh_api.py  git_installation_check.py  gitlab.py  issue_trackers.py  pipeline.py  project_config.py  report_struct.py
evalops/commands/: deploy.py  fix.py  gh_post_review_comment.py  gh_react_to_comment.py  gitlab_post_review_comment.py  linear_comment.py  repl.py  version.py
evalops/enrichment/: __init__.py  deep_agent.py  graph.py  modes.py  types.py
evalops/graph/: __init__.py  context.py
evalops/llm/: __init__.py  errors.py  providers.py  runtime.py
evalops/pipeline_steps/: jira.py  linear.py
evalops/prompts/: __init__.py  renderer.py
evalops/quality/: __init__.py  deepeval_gate.py
evalops/runtime/: __init__.py  settings.py
evalops/tokenization/: __init__.py  service.py
evalops/tpl/: answer.j2
evalops/tpl/questions/: changes_summary.j2  release_notes.j2  test_cases.j2
evalops/tpl/workflows/github/: evalops-code-review.yml.j2  evalops-react-to-comments.yml.j2
evalops/tpl/workflows/gitlab/: .gitlab-ci.yml.j2  evalops-code-review.yml.j2
evalops/ui/: __init__.py  console.py
evalops/utils/: cli.py  files.py  git.py  html.py  importing.py  markdown.py  package_metadata.py  python.py  string.py
evalops/utils/git_platform/: __init__.py  github.py  gitlab.py  platform_types.py  shared.py
evalops/utils/git_platform/adapters/: base.py  gitlab.py
scripts/: test_gemma_reachability.py
tests/: conftest.py  test_affected_lines.py  test_cleanup_comment.py  test_core_post_process.py  test_core_summary.py  test_deepeval_gate.py  test_deploy.py  test_enrichment.py  test_fix.py  test_graph_context.py  test_issue_trackers.py  test_llm_runtime.py  test_pipeline.py  test_project_config.py  test_prompt_renderer.py  test_raw_issue.py  test_render.py  test_report_struct.py  test_run.py  test_runtime_settings.py  test_tokenization.py  test_utils.py  test_utils_markdown_syntax_hint.py  test_version.py
tests/fixtures/: config-disable-jira.toml  cr-report-1.json
(+2 files in other folders)
