[tool.poetry]
name = "evalops.bot"
version = "4.0.3"
description = "AI code review tool that works with any language model provider. It detects issues in GitHub pull requests or local changes—instantly, reliably, and without vendor lock-in."
readme = "README.md"
keywords = [
    "static code analysis",
    "code review",
    "code quality",
    "ai",
    "coding",
    "assistant",
    "llm",
    "github",
    "automation",
    "devops",
    "developer tools",
    "github actions",
    "workflows",
    "github-actions",
    "git",
    "pull-request",
    "jira",
    "linear",
    "gitlab",
    "ci-cd",
    "static analysis",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Bug Tracking",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
packages = [
    { include = "evalops" }
]
[tool.poetry.dependencies]
python = "^3.11"
GitPython = "^3.1.44"
unidiff = "^0.7.5"
google-genai = ">=1.65.0,<2.0.0"
anthropic = ">=0.57.1,<1"
typer = ">=0.16.0,<0.22"
ghapi = "~=1.0.8"
jira = "^3.10.5"
pydantic = "^2.12.5"
langchain-core = "^1.3.2"
langchain-openai = "^1.2.1"
langchain-anthropic = "^1.4.1"
langchain-google-genai = "^4.2.2"
jinja2 = "^3.1.6"
tiktoken = "^0.12.0"
tenacity = "^9.1.4"
# fastcore dependency is fixed becasue 1.12+ does not work in python 3.11, used by ghapi
# https://github.com/AnswerDotAI/fastcore/pull/752
fastcore= "~=1.11.3"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-pyproject = "*"
black = "*"
build = "*"
twine = "*"
pylint = "*"
pyflakes = "*"
poetry = "*"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3,<10"
pytest-asyncio = ">=0.21.0,<2"
pytest-mock = "^3.12.0"
pytest-cov = ">=4.1.0,<8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
evalops = "evalops.entrypoint:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --capture=no --log-cli-level=INFO"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 100
